<resources>
    <string name="app_name">Đặt Vé Tàu Online</string>
    <string name="txt_name">Tên</string>
    <string name="txt_sdt">Số Điện Thoại</string>
    <string name="rdb_vip">VIP</string>
    <string name="rdb_normal">Thường</string>
    <string name="rdb_ngoi">Ghế Ngồi</string>
    <string name="rdb_nam">Giường Nằm</string>
    <string name="txtLan">Languages</string>
    <string-array name="lan_array">
        <item>USD</item>
        <item>VND</item>
    </string-array>
</resources>
